<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CustomerProfile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="166dp"
        android:layout_height="44dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/userProfile"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/customerPassword"
        android:layout_width="192dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <Button
        android:id="@+id/buttonConfirmchange"
        android:layout_width="155dp"
        android:layout_height="53dp"
        android:background="@drawable/button"
        android:fontFamily="@font/noto_sans"
        android:text="@string/confirmChanges"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <Button
        android:id="@+id/buttonDeleteProfile"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:background="@drawable/buttondelete"
        android:fontFamily="@font/noto_sans"
        android:text="@string/deleteProfile"
        android:textAllCaps="false"
        android:textColor="#F4F2F2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="406dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_nav"
            android:elevation="16dp"
            android:padding="8dp"
            app:cnb_menuResource="@menu/menu_bottom" >

        </com.ismaeldivita.chipnavigation.ChipNavigationBar>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:backgroundTint="#10A784"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/abc_vector_test" />

    <EditText
        android:id="@+id/customerUsername"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/txtUsername"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <EditText
        android:id="@+id/customerEmail"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/txtEmail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <EditText
        android:id="@+id/customerContact"
        android:layout_width="189dp"
        android:layout_height="41dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/txtContact"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />
</androidx.constraintlayout.widget.ConstraintLayout>