<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    tools:context=".Delete">

    <Button
        android:id="@+id/FoodN"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="311dp"
        android:layout_height="33dp"
        android:layout_marginTop="84dp"
        android:background="@color/design_default_color_on_primary"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="casual"
        android:gravity="center|start"
        android:text="@string/food1"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#4A4949"
        android:textColorLink="#9A9494"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="319dp"
        android:layout_height="142dp"
        android:background="#D1E3E1"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/FoodN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Searchbar"
        app:srcCompat="@drawable/tanduri" />

    <Button
        android:id="@+id/Search1"
        android:layout_width="89dp"
        android:layout_height="35dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="68dp"
        android:background="#DFDCDC"
        android:fadingEdge="horizontal|vertical"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Searchbar"

        app:layout_constraintVertical_bias="0.214" />

    <Button
        android:id="@+id/delete"
        android:layout_width="371dp"
        android:layout_height="41dp"
        android:background="@android:color/holo_red_dark"
        android:fadingEdge="horizontal|vertical"
        android:text="@string/hi"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#151414"
        android:textColorLink="#151414"
        android:textCursorDrawable="@android:drawable/alert_dark_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodN" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="196dp"
        android:button="@android:drawable/checkbox_off_background"
        android:textColor="#090909"
        app:layout_constraintBottom_toTopOf="@+id/FoodN"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Searchbar"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:text="@string/search"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toStartOf="@+id/Search1"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

</androidx.constraintlayout.widget.ConstraintLayout>